<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.franklinho.todo.EditItemActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_label"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etToDoName"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/spnPriority"
        android:layout_alignStart="@+id/spnPriority" />
        <!--android:layout_marginTop="20dp"-->
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:onClick="saveEditedItem"
        android:layout_below="@+id/spnStatus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/priority_label"
        android:id="@+id/textView3"
        android:layout_below="@+id/etToDoName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnPriority"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:entries="@array/priority_levels"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/etToDoName"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/due_date_label"
        android:id="@+id/textView2"
        android:layout_below="@+id/spnPriority"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dpDueDate"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_below="@+id/spnPriority"
        android:layout_toRightOf="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/notes_string"
        android:id="@+id/textView4"
        android:layout_below="@+id/dpDueDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etNotes"
        android:layout_below="@+id/dpDueDate"
        android:layout_alignRight="@+id/dpDueDate"
        android:layout_alignEnd="@+id/dpDueDate"
        android:layout_alignLeft="@+id/dpDueDate"
        android:layout_alignStart="@+id/dpDueDate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/status_string"
        android:id="@+id/textView5"
        android:layout_below="@+id/etNotes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnStatus"
        android:entries="@array/completed_statuses"
        android:spinnerMode="dropdown"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignLeft="@+id/etNotes"
        android:layout_alignStart="@+id/etNotes" />

</RelativeLayout>
